name:          hdbc-odbc2
version:       0.1.0.0
cabal-version: >=1.8
build-type:    Simple
license:       BSD3
maintainer:    Anton Dessiatov <anton.dessiatov@gmail.com>
author:        John Goerzen
copyright:     Copyright (c) 2005-2014 John Goerzen, Nicolas Wu, Anton Dessiatov
license-file:  LICENSE
extra-source-files:
    LICENSE
  , cbits/hdbc-odbc-helper.h
  , Makefile
  , README.md
  , testsrc/TestTime.hs
  , changelog.txt
homepage:      https://github.com/gbwey/hdbc-odbc2
category:      Database
synopsis:      ODBC driver for HDBC
description:
  This package provides an ODBC database backend for HDBC.
  It is cross-platform and supports unixODBC on Unix/Linux/POSIX platforms
  and Microsoft ODBC on Windows.  It is also the preferred way to access
  MySQL databases from Haskell.
stability:     Beta

library
  exposed-modules:
      Database.HDBC.ODBC
    , Database.HDBC.ODBC.ConnectionImpl
--  other-modules:
      Database.HDBC.ODBC.Api.Errors
    , Database.HDBC.ODBC.Api.Imports
    , Database.HDBC.ODBC.Api.Types
    , Database.HDBC.ODBC.Connection
    , Database.HDBC.ODBC.Log
    , Database.HDBC.ODBC.Statement
    , Database.HDBC.ODBC.TypeConv
    , Database.HDBC.ODBC.Utils
    , Database.HDBC.ODBC.Wrappers

    , Database.HDBC
    , Database.HDBC.Types
    , Database.HDBC.DriverUtils
    , Database.HDBC.ColTypes
    , Database.HDBC.Statement
    , Database.HDBC.SqlValue
    , Database.HDBC.Locale
    , Database.HDBC.Utils

  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wunused-type-patterns

  if impl(ghc >= 8.8)
    ghc-options: -fwrite-ide-info -hiedir=.hie

  extensions:
      ExistentialQuantification
    , ForeignFunctionInterface
    , ScopedTypeVariables
--    , CPP
    , MultiParamTypeClasses
    , FlexibleContexts
    , TypeSynonymInstances
    , TypeOperators
    , RankNTypes
    , FlexibleInstances
    , DeriveDataTypeable

  build-depends:
      base >= 4.3.1.0 && < 5
    , concurrent-extra >= 0.7.0.8
    , deepseq
    , mtl
    , time>=1.2.0.3
    , utf8-string
    , bytestring
    , containers
    , old-time
    , convertible >= 1.1.0.0
    , text
  c-sources:
      cbits/hdbc-odbc-helper.c
  include-dirs:
      cbits


  if os(mingw32) || os(win32)
    extra-libraries: odbc32
  else
    extra-libraries: odbc, pthread

executable runtests
    buildable: False
    build-depends:
        base
      , HUnit
      , hdbc-odbc2
      , QuickCheck
      , testpack
      , containers
      , old-time
      , time
      , old-locale
      , convertible
  main-is: runtests.hs
  other-modules:
      SpecificDB
    , SpecificDBTests
    , TestMisc
    , TestSbasics
    , TestUtils
    , Testbasics
    , Tests
  hs-source-dirs: testsrc
  ghc-options: -O2
  extensions:
      ExistentialQuantification
    , ForeignFunctionInterface
    , ScopedTypeVariables

executable stresstest
    buildable: False
    build-depends:
        base
      , hdbc-odbc2
      , random
      , resource-pool
  main-is: stresstest.hs
  hs-source-dirs: stresstest
  ghc-options: -threaded -rtsopts
